--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "winston": "^3.14.2"
