--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^4.1.0",
     "debug": "^4.3.7",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
